[pbr]
skip_authors = true
skip_changelog = true

[metadata]
name = amaltheia
author = Aggelos Kolaitis
author-email = akolaitis@admin.grnet.gr
summary = A system update tool for production servers
description-file = README.md

[files]
packages =
    amaltheia

[entry_points]
console_scripts =
    amaltheia = amaltheia.amaltheia:main
